# FastKafka_DDD

./: .gitignore  Makefile  README.md  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  message.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/logic/: __init__.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/events/exceptions/: base.py  mediator.py  messages.py
app/tests/: conftest.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: conftest.py  test_messages.py
docker_compose/: app.yaml
